<resources>
    <string name="app_name">DemoRealm</string>
    <string name="add_student">Thêm sinh viên</string>
    <string name="title_add_student">Thêm Sinh viên</string>
    <string name="name">Nhập tên</string>
    <string name="age">Nhập tuổi</string>
    <string name="close">Đóng</string>
    <string name="save">Lưu</string>
    <string name="class_room">Lớp học</string>
    <string name="course">Khoá học</string>
    <string name="email">Nhập email</string>
    <string name="number_phone">Nhập số điện thoại</string>
    <string name="not_enter_name">Vui lòng nhập tên</string>
    <string name="not_enter_age">Vui lòng nhập tuổi</string>
    <string name="not_enter_class">Vui lòng nhập Lớp</string>
    <string name="not_enter_sourse">Vui lòng nhập khóa học</string>
    <string name="not_enter_email">Vui lòng nhập email</string>
    <string name="not_enter_number_phone">Vui lòng nhập số điện thoại</string>
</resources>
