<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/title_add_student"
        android:textSize="@dimen/sp_25"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_class_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:ems="10"
        android:hint="@string/class_room" />

    <EditText
        android:id="@+id/et_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:ems="10"
        android:hint="@string/course" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:ems="10"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/et_number_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/number_phone" />

    <LinearLayout
        android:layout_marginVertical="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/close"
            android:textColor="@android:color/white" />

        <Button
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
